# internal/api/models/offer.go
@@ -24,15 +24,15 @@ type OfferResp struct {
 }
 
 type CreateOfferReq struct {
-	Title            string   `json:"title" form:"title" binding:"required"`
-	Description      string   `json:"description" form:"description" binding:"required"`
-	Type             string   `json:"type" form:"type" binding:"required"`
-	ExpiryDate       time.Time   `json:"expiry_date" form:"expiry_date" binding:"required"`
-	CommissionAgent  *float64 `json:"commission_agent" form:"commission_agent"`
-	CommissionAgency *float64 `json:"commission_agency" form:"commission_agency"`
-	Discount         *float64 `json:"discount" form:"discount"`
-	PriceInstallment *float64 `json:"price_installment" form:"price_installment"`
-	PriceCash        *float64 `json:"price_cash" form:"price_cash"`
+	Title            string    `json:"title" form:"title" binding:"required"`
+	Description      string    `json:"description" form:"description" binding:"required"`
+	Type             string    `json:"type" form:"type" binding:"required"`
+	ExpiryDate       time.Time `json:"expiry_date" form:"expiry_date" binding:"required"`
+	CommissionAgent  *float64  `json:"commission_agent" form:"commission_agent"`
+	CommissionAgency *float64  `json:"commission_agency" form:"commission_agency"`
+	Discount         *float64  `json:"discount" form:"discount"`
+	PriceInstallment *float64  `json:"price_installment" form:"price_installment"`
+	PriceCash        *float64  `json:"price_cash" form:"price_cash"`
 }
 
 const (
@@ -44,7 +44,7 @@ const (
 type AttachOfferPropertiesReq struct {
 	// OfferID UUID
 	// @example "123e4567-e89b-12d3-a456-426614174000"
-	OfferID     uuid.UUID   `json:"offer_id" binding:"required"`
+	OfferID uuid.UUID `json:"offer_id" binding:"required"`
 
 	// PropertyIDs list of UUIDs
 	// @example ["123e4567-e89b-12d3-a456-426614174001", "123e4567-e89b-12d3-a456-426614174002"]
@@ -52,6 +52,8 @@ type AttachOfferPropertiesReq struct {
 }
 
 type PropertyIDsReq struct {
+	// PropertyIDs list of UUIDs
+	// @example ["123e4567-e89b-12d3-a456-426614174001", "123e4567-e89b-12d3-a456-426614174002"]
 	PropertyIDs []uuid.UUID `json:"property_ids" binding:"required"`
 }
 
